# AI-AGENT-ZerePy

./: .env.example  .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  replit.nix  vercel.json
agents/: IDLE AI.json  eternalai-example.json  example.json  general.json  idle.json  starter.json
src/: action_handler.py  agent.py  cli.py  connection_manager.py  prompts.py
src/actions/: echochamber_actions.py  eternalai_actions.py  ethereum_actions.py  solana_actions.py  sonic_actions.py  twitter_actions.py
src/connections/: allora_connection.py  anthropic_connection.py  base_connection.py  discord_connection.py  echochambers_connection.py  eternalai_connection.py  ethereum_connection.py  evm_connection.py  farcaster_connection.py  galadriel_connection.py  goat_connection.py  groq_connection.py  hyperbolic_connection.py  monad_connection.py  ollama_connection.py  openai_connection.py  perplexity_connection.py  solana_connection.py  sonic_connection.py  together_connection.py  twitter_connection.py  xai_connection.py
src/constants/: __init__.py  abi.py  networks.py
src/helpers/: __init__.py
src/helpers/solana/: faucet.py  lend.py  performance.py  pumpfun.py  read.py  stake.py  token_deploy.py  trade.py  transfer.py
src/server/: __init__.py  app.py  client.py
src/types/: __init__.py
